Update Swagger Categories
